fixed bug on mobile screens
changes the style to work on mobile devices

--- a/tribalStyle.css
+++ b/tribalStyle.css
@@ -1,7 +1,8 @@
 
 html, body {
     display: table;
-    width: 100%;
+    width: 100%
+   
 }
 
 .header {
@@ -53,6 +54,7 @@ img {
  .logo img{
     margin-top: 30px;
     margin-bottom: 30px;
+    width: 100%;
 }
 
 .title {
@@ -136,8 +138,16 @@ letter-spacing: 0px;
 }
 
 @media only screen and (max-width: 480px) {
+    .content {
+        width: 95% !important;
+    }
+    
+    .logo img {
+        width: 300px;
+    }
+    
     img.biscuits {
-        width: 100px;
+        width: 90px;
     }
     
     h1 {
